# ArticficialIntelligence_CSIE5400

./: environment.yml  pyproject.toml
HW1/: BLIP_flickr_performance.csv  README.md  Task1.ipynb  Task2.ipynb  hw1.ipynb  task2.ipynb
HW1/Task1_performance/: BLIP_MScoco_performance.csv  Phi_MScoco_performance.csv  Phi_flickr_performance.csv
HW2/: generate.py  generate4am.py  queries.csv  submission.csv  task1.ipynb  task1.py  task2.ipynb  test_submission.csv  tmp.ipynb
HW2/HW2 Retrieval Augmented Generation/: HW2_template.csv  task1.py
HW2/chroma_db/: chroma.sqlite3
HW2/chroma_db_task2/: chroma.sqlite3
HW2/pdf_pages/: failed.txt  page_001_caption.json  page_001_caption_strip.json  page_001_caption_strip.txt  page_001_ocr.txt  page_002_caption.json  page_002_caption_strip.json  page_002_ocr.txt  page_003_caption.json  page_003_caption_strip.json  page_003_ocr.txt  page_004_caption.json  page_004_caption_strip.json  page_004_ocr.txt  page_005_caption.json  page_005_caption_strip.json  page_005_ocr.txt  page_006_caption.json  page_006_caption_strip.json  page_006_ocr.txt  page_007_caption.json  page_007_ocr.txt  page_008_caption_strip.json  page_008_ocr.txt  page_009_caption.json  page_009_caption_strip.json  page_009_ocr.txt  page_010_caption.json  page_010_caption_strip.json  page_010_ocr.txt  page_011_caption.json  page_011_caption_strip.json  page_011_ocr.txt  page_012_caption.json  page_012_caption_strip.json  page_012_ocr.txt  page_013_caption.json  (+1126 more)
HW3/: chick fil a_restaurant_data.json  main.py  run_test.sh  runtime-log.txt  t.ipynb  tacobell.json  test.py
(+806 files in other folders)
