[tool.poetry]
name = "yoyo"
version = "0.1.0"
description = ""
authors = ["leeyoyo49 <lee.s.yoyo0409@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.50.0"
datasets = "^3.4.1"
evaluate = "^0.4.3"
nltk = "^3.9.1"
ipykernel = "^6.29.5"
torch = "^2.6.0"
pillow = "^11.1.0"
torchvision = "^0.21.0"
scipy = "^1.15.2"
peft = "^0.15.0"
backoff = "^2.2.1"
accelerate = "^1.5.2"
ninja = "^1.11.1.4"
wheel = "^0.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
